--- a/WHUdailyreport.html
+++ b/WHUdailyreport.html
@@ -67,10 +67,10 @@
     s = "0"+s;
     }
     
-    if(sss<10){undefined
+     if(sss<10){undefined
     sss = "0"+sss;
-    }else if(sss<100){undefined
-    sss = sss;
+    }else if(sss>=10 && sss<100){undefined
+    sss = (sss-(sss%10))/10;
     }
     
     document.getElementById(timeID.id).innerHTML =  m+"-"+d+"   "+h+":"+minute+":"+s+"."+sss+"  ";
