--- a/WHUdailyreport.html
+++ b/WHUdailyreport.html
@@ -67,10 +67,12 @@
     s = "0"+s;
     }
     
-     if(sss<10){undefined
+    if(sss<10){undefined
     sss = "0"+sss;
-    }else if(sss>=99){undefined
-    sss = parseInt(sss/10)+sss%10;
+    }else if(sss>=10 && sss<=99){undefined
+    sss=sss;
+    }else {undefined
+    sss = parseInt(sss/100)+sss%100;
     }
     
     document.getElementById(timeID.id).innerHTML =  m+"-"+d+"   "+h+":"+minute+":"+s+"."+sss+"  ";
