--- a/WHUdailyreport.html
+++ b/WHUdailyreport.html
@@ -4,13 +4,13 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" /> 
 <!-- Chrome -->
-<meta name="theme-color" content="#ff6600" />
+<meta name="theme-color" content="#205618" />
 <!-- Windows Phone -->
-<meta name="msapplication-navbutton-color" content="#4285f4">
+<meta name="msapplication-navbutton-color" content="#205618">
 <!-- iOS Safari -->
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-<title>武大日报平安</title>
+<!--<title>武大日报平安</title>-->
 <link rel="stylesheet" href="WHUdailyreport.css">
 </head>
 <body>
