--- a/WHUdailyreport.html
+++ b/WHUdailyreport.html
@@ -10,7 +10,7 @@
 <!-- iOS Safari -->
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-<!--<title>武大日报平安</title>-->
+<title>武大日报平安</title>
 <link rel="stylesheet" href="WHUdailyreport.css">
 </head>
 <body>
